...
          child: Padding(
            padding: const EdgeInsets.fromLTRB(16, 0, 16, 16),
            child: Column(
              crossAxisAlignment: CrossAxisAlignment.start,
              children: [
                SectionHeader(
                  title: 'Seus Favoritos',
                ),
                const FavoritesSectionBuilder(),
                InvitesBannerBuilder(
                  margin: const EdgeInsets.only(top: 12),
                  onPressed: () {
                    context.router.push(const InviteFlowRoute());
...
